--- a/About/About.Rmd
+++ b/About/About.Rmd
@@ -3,8 +3,8 @@ title: 'Demographic Exploration and Discovery (with R): About'
 author: "Tim Riffe"
 date: "April 2, 2019"
 output:
-  pdf_document: default
   html_document: default
+  pdf_document: default
 ---
 
 ```{r setup, include=FALSE}
@@ -16,17 +16,17 @@ This is a course about *seeing* data, about getting comfortable with asking data
 
 This is *not* a course about modeling, but we might do some. This is *not* a course on formal demography, but we might do some. This is *not* a research colloquium, but there may be times where it feels like one. This is *not* a course about `R`, but it will be a good intro to `R` anyway. If you're doing these things in other courses, then this course will be a major booster. Of skills and attitude.
 
-I hope that this course may serve to support other aspects of your master program and beyong. If you take the tools from this course to heart, then you'll keep them with you forever. 
+I hope that this course may serve to support other aspects of your master program and beyond. If you take the tools from this course to heart, then you'll keep them with you forever. 
 
 # About me
 I do demography. Here some key words that might help: Mortality, health, mortality and health inequalities, decomposition, visualization, formal demography, `R` development of tools for demography. I love this stuff, like for real. I didn't always do this stuff. My undergrad was in philosophy. All the programming and math came later in life, rather at random. I jsut got over it, learned by experimenting, making mistakes, over and over. And I still do. 
 
-### meetings
+### Meetings
 You can find me at the MPIDR. During this course you should feel somewhat entitled to ask for meetings, but always email enough in advance so that it's logistically possible. German or English are both OK for in-person meetings. Don't feel ashamed if you don't understand something, ask for help. 
 
 Email: `riffe@demogr.mpg.de`
 
-### communication and materials
+### Communication and materials
 By the way, you should **send me an email** as soon as you decide you're going to take this class to declare so. I'll use email, to communicate with you. That includes cancellations, etc. I'll update a github site after each session, with prettified and annotated code. That's here:
 [https://github.com/timriffe/DemoED](https://github.com/timriffe/DemoED)
 
