--- a/Lecture_19062019/Freestyle.Rmd
+++ b/Lecture_19062019/Freestyle.Rmd
@@ -10,12 +10,11 @@ knitr::opts_chunk$set(echo = TRUE)
 ```
 
 Prelims:
-```{r}
+```{r, echo = FALSE}
 library(tidyverse)
 library(ggplot2)
 library(ggridges)
 library(readr)
-library(here)
 ```
 
 # The exercise:
@@ -29,7 +28,7 @@ Then follow these steps:
 1. move it to the folder for today's session
 2. read it into `R` somehow.
 
-```{r}
+```{r, echo = FALSE}
 HFC <- read_csv("HFC_ASFRstand_TOT.txt", 
 				na = ".") # HMD world uses '.' for NA
 # Warnings for the Note column. 
@@ -45,47 +44,75 @@ table(HFC$Age) # uniform ages 14-50
 sample_n(HFC,5)
 ```
 
-4. within each subset (there arte more grouping variables than just country and year) calculate the total fertility rate (TFR) and the (ASFR-weighted) mean age at childbearing (MAB).
+4. within each subset (there art more grouping variables than just country and year) calculate the total fertility rate (TFR) and the (ASFR-weighted) mean age at childbearing (MAB).
 
-```{r}
-# From the above, it seems like we have a lot of potential
-# grouping variables
-HFC <- HFC %>% 
-	group_by(
-	          Country, 
-			  Year1,
-			  Region, 
-			  Urban, 
-			  Origin, 
-			  Collection, 
-			  SourceType,
-			  RefCode,
-			  Vitality,
-			  AgeDef) %>% 
-	mutate(TFR = sum(ASFR, na.rm = TRUE),
-		   MAB = sum(Age * ASFR, na.rm = TRUE) / TFR,
-		   TFRint = TFR - TFR %% .25) %>% # can change TFR interval 
+```{r, echo = FALSE}
+HFCminmax <- HFC %>% group_by(Country, 
+ 			  Year1,
+ 			  Region, 
+ 			  Urban, 
+ 			  Origin, 
+ 			  Collection, 
+ 			  SourceType,
+ 			  RefCode,
+ 			  Vitality,
+ 			  AgeDef) %>% 
+	mutate(
+		   Age2 = ifelse(AgeDef == "ACY", Age + .5, Age),
+		   TFR = sum(ASFR, na.rm = TRUE),
+		   MAB = sum(ASFR * Age2, na.rm = TRUE) / TFR,
+		   TFRint = TFR - TFR %% .25) %>% 
 	ungroup() %>% 
 	group_by(TFRint) %>% 
 	mutate(MABmax = MAB == max(MAB),
-		   MABmin = MAB == min(MAB),
-		   MABminmax = MABmax | MABmin,
-		   MABgroup = ifelse(MABmax, "max MAB",ifelse(MABmin,"min MAB",NA))) %>% 
-	filter(MABminmax & TFR < 6) %>% 
-	ungroup()
+ 		   MABmin = MAB == min(MAB),
+ 		   MABminmax = MABmax | MABmin,
+ 		   MABgroup = ifelse(MABmax, "max MAB",ifelse(MABmin,"min MAB",NA))) %>% filter(!is.na(MABgroup) & TFR < 6) %>% 
+	ungroup() 
+
+# From the above, it seems like we have a lot of potential
+# grouping variables
+HFCminmax2 <- HFC %>% 
+ 	group_by(
+ 	          Country, 
+ 			  Year1,
+ 			  Region, 
+ 			  Urban, 
+ 			  Origin, 
+ 			  Collection, 
+ 			  SourceType,
+ 			  RefCode,
+ 			  Vitality,
+ 			  AgeDef) %>% 
+ 	mutate(TFR = sum(ASFR, na.rm = TRUE),
+ 		   MAB = sum(Age * ASFR, na.rm = TRUE) / TFR,
+ 		   TFRint = TFR - TFR %% .25) %>% # can change TFR interval 
+ 	ungroup() %>% 
+ 	group_by(TFRint) %>% 
+ 	mutate(MABmax = MAB == max(MAB),
+ 		   MABmin = MAB == min(MAB),
+ 		   MABminmax = MABmax | MABmin,
+ 		   MABgroup = ifelse(MABmax, "max MAB",ifelse(MABmin,"min MAB",NA))) %>% 
+ 	filter(MABminmax & TFR < 6) %>% 
+ 	ungroup()
+
+
+
 ```
 
 5. now the goal is to draw a ridge plot of ASFR, where each ridge is a discrete bin of TFR in uniform intervals (maybe 8 - 15 different steps or so). Within each ridge there will be two distributions: The ASFR curve with the highest MAB and the one with the lowest MAB.
 
 ```{r, fig.height = 10}
-p <- ggplot(HFC,
-			mapping = aes(x = Age, 
-						 y = factor(TFRint, 
-						 		   levels = sort(unique(TFRint)), 
-						 		   ordered = TRUE)))
-p + 
-	geom_ridgeline(mapping = aes(x = Age, height = ASFR, fill = MABgroup),                          scale = 4, 
-				   alpha = .6)
+ p <- ggplot(HFCminmax,
+ 			mapping = aes(x = Age, 
+ 						 y = factor(TFRint, 
+ 						 		   levels = sort(unique(TFRint)), 
+ 						 		   ordered = TRUE)))
+ p + 
+ 	geom_ridgeline(mapping = aes(x = Age, 
+ 								 height = ASFR, 
+ 								 fill = MABgroup),                                     scale = 4, 
+ 				   alpha = .6)
 ```
 6. What is the message that this plot delivers?
 
